Add codes to js file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Rock Paper Scissors</title>
-    <script src="../rock-paper-s/script.js"></script>
+    <script src="../Odin-RockPaperScissors/script.js"></script>
 </head>
 <body>
 
